made changes to html, md, js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>AJ's Password Generator</title>
     <link rel="stylesheet" href="./Develop/assets/style/style.css" />
   </head>
+  
   <body>
 
 
@@ -32,6 +33,17 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+
+
+    <!-- <script src="script.js"></script> -->
+  
+  
+  
+  
+  <!-- # END OF BODY -->
+  
+
+  <!-- INSERT SCRIPT HERE -->
+<script src="./Develop/assets/scripts/script.js"></script>
   </body>
 </html>
