made final updates for the first version

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
 
   <!-- INSERT SCRIPT HERE -->
-<script src="./Develop/assets/scripts/script.js"></script>
-
+<!-- <script src="./Develop/assets/scripts/script.js"></script> -->
+<script src="./Develop/assets/scripts/v3.js  "></script>
 </body>
 </html>
